Update model data type, crud operations, text area formatting

--- a/Pages/Applications/Create.cshtml
+++ b/Pages/Applications/Create.cshtml
@@ -26,7 +26,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Application.Status" class="control-label"></label>
-                <input asp-for="Application.Status" class="form-control" />
+                <select class="form-control" asp-for="Application.Status" asp-items="@Html.GetEnumSelectList<Status>()">
+                    <option value=""></option>
+                </select>
+                @*<input asp-for="Application.Status" class="form-control" />*@
                 <span asp-validation-for="Application.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -40,17 +43,20 @@
                 <span asp-validation-for="Application.Note" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Application.JobDescription" class="control-label"></label>
+                <textarea id="jd" asp-for="Application.JobDescription" class="form-control"></textarea>
+                <span asp-validation-for="Application.JobDescription" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Application.Result" class="control-label"></label>
-                @Html.DropDownListFor(model => model.Application.Result, Enum.GetValues(typeof(Result)).Cast<Result>().Select(e => new SelectListItem
-                {
-                Text = e.ToString(),
-                Value = ((int)e).ToString()
-                }), "Select an option", new { @class = "form-control" })
+                <select class="form-control" asp-for="Application.Result" asp-items="@Html.GetEnumSelectList<Result>()">
+                    <option value=""></option>
+                </select>
                 @*<input asp-for="Application.Result" class="form-control" />*@
                 <span asp-validation-for="Application.Result" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input onclick="replaceLineBreaks()" type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -63,3 +69,12 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+<script>
+    function replaceLineBreaks() {
+        var textarea = document.getElementById('jd');
+        textarea.value = textarea.value.replace(/\r?\n/g, '\\n');
+    }
+</script>
+
+
