--- a/Pages/Applications/Edit.cshtml
+++ b/Pages/Applications/Edit.cshtml
@@ -42,7 +42,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Application.JobDescription" class="control-label"></label>
-                <textarea asp-for="Application.JobDescription" class="form-control" />
+                <textarea id="jd" asp-for="Application.JobDescription" rows="6" class="form-control">@Html.Raw(Model.Application.JobDescription)</textarea>
                 <span asp-validation-for="Application.JobDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -54,7 +54,7 @@
                 <span asp-validation-for="Application.Result" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input onclick="replaceLineBreaks()" type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -67,3 +67,10 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+<script>
+    function replaceLineBreaks() {
+        var textarea = document.getElementById('jd');
+        textarea.value = textarea.value.replace(/\r?\n/g, '\\n');
+    }
+</script>
